// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EnhancedReminderSelector Snapshots Disabled State renders in disabled state (collapsed) 1`] = `
<View
  className="mb-4"
  testID="enhanced-reminder-selector"
>
  <View
    className="flex-row items-center justify-between rounded-xl border border-stone-200 bg-white px-3.5 py-3"
    style={
      {
        "elevation": 1,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.05,
        "shadowRadius": 2,
      }
    }
  >
    <View
      className="flex-row items-center gap-3"
    >
      <View
        className="h-9 w-9 items-center justify-center rounded-full bg-amber-100"
      >
        <View
          color="#f59e0b"
          size={16}
          testID="lucide-icon-Bell"
        />
      </View>
      <Text
        className="text-sm font-medium text-stone-900"
      >
        Daily Reminder
      </Text>
    </View>
    <RCTSwitch
      accessibilityLabel="Enable reminder"
      accessibilityRole="switch"
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#10B981"
      style={
        [
          {
            "alignSelf": "flex-start",
          },
          {
            "backgroundColor": "#d6d3d1",
            "borderRadius": 16,
          },
        ]
      }
      testID="reminder-toggle"
      thumbTintColor="#ffffff"
      tintColor="#d6d3d1"
      value={false}
    />
  </View>
</View>
`;

exports[`EnhancedReminderSelector Snapshots Enabled State renders with custom time (no preset selected) 1`] = `
<View
  className="mb-4"
  testID="enhanced-reminder-selector"
>
  <View
    className="flex-row items-center justify-between rounded-xl border border-stone-200 bg-white px-3.5 py-3"
    style={
      {
        "elevation": 1,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.05,
        "shadowRadius": 2,
      }
    }
  >
    <View
      className="flex-row items-center gap-3"
    >
      <View
        className="h-9 w-9 items-center justify-center rounded-full bg-amber-100"
      >
        <View
          color="#f59e0b"
          size={16}
          testID="lucide-icon-Bell"
        />
      </View>
      <Text
        className="text-sm font-medium text-stone-900"
      >
        Daily Reminder
      </Text>
    </View>
    <RCTSwitch
      accessibilityLabel="Disable reminder"
      accessibilityRole="switch"
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#10B981"
      style={
        [
          {
            "alignSelf": "flex-start",
          },
          {
            "backgroundColor": "#d6d3d1",
            "borderRadius": 16,
          },
        ]
      }
      testID="reminder-toggle"
      thumbTintColor="#ffffff"
      tintColor="#d6d3d1"
      value={true}
    />
  </View>
  <View
    className="mt-3"
  >
    <View
      className="mb-3 flex-row gap-2"
      testID="preset-buttons"
    >
      <View
        accessibilityLabel="Set reminder for 7 AM"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": false,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="flex-1"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="preset-morning"
      >
        <View
          className="items-center justify-center rounded-xl px-2 py-2.5"
          collapsable={false}
          style={
            {
              "backgroundColor": "#f5f5f4",
              "borderColor": "transparent",
              "borderWidth": 1,
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <Text
            className="mb-0.5 text-base"
          >
            🌅
          </Text>
          <Text
            className="text-xs font-medium"
            style={
              {
                "color": "#57534e",
              }
            }
          >
            7 AM
          </Text>
        </View>
      </View>
      <View
        accessibilityLabel="Set reminder for 12 PM"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": false,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="flex-1"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="preset-midday"
      >
        <View
          className="items-center justify-center rounded-xl px-2 py-2.5"
          collapsable={false}
          style={
            {
              "backgroundColor": "#f5f5f4",
              "borderColor": "transparent",
              "borderWidth": 1,
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <Text
            className="mb-0.5 text-base"
          >
            ☀️
          </Text>
          <Text
            className="text-xs font-medium"
            style={
              {
                "color": "#57534e",
              }
            }
          >
            12 PM
          </Text>
        </View>
      </View>
      <View
        accessibilityLabel="Set reminder for 8 PM"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": false,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="flex-1"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="preset-evening"
      >
        <View
          className="items-center justify-center rounded-xl px-2 py-2.5"
          collapsable={false}
          style={
            {
              "backgroundColor": "#f5f5f4",
              "borderColor": "transparent",
              "borderWidth": 1,
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <Text
            className="mb-0.5 text-base"
          >
            🌙
          </Text>
          <Text
            className="text-xs font-medium"
            style={
              {
                "color": "#57534e",
              }
            }
          >
            8 PM
          </Text>
        </View>
      </View>
    </View>
    <View
      accessibilityHint="Opens time picker"
      accessibilityLabel="Custom time set to 6:30 AM. Double tap to change."
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      className="mb-3"
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID="custom-time-button"
    >
      <View
        className="flex-row items-center justify-between rounded-xl border px-3.5 py-3"
        style={
          {
            "backgroundColor": "#ECFDF5",
            "borderColor": "#10B981",
            "borderWidth": 2,
          }
        }
      >
        <View
          className="flex-row items-center gap-2.5"
        >
          <View
            color="#047857"
            size={16}
            testID="lucide-icon-Clock"
          />
          <Text
            className="text-sm font-medium"
            style={
              {
                "color": "#047857",
              }
            }
          >
            6:30 AM
          </Text>
        </View>
        <View
          color="#047857"
          size={18}
          testID="lucide-icon-ChevronRight"
        />
      </View>
    </View>
    <View
      className="items-center"
    >
      <View
        testID="next-reminder-badge"
      >
        <Text>
          Next: 
          6:30 AM
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`EnhancedReminderSelector Snapshots Enabled State renders with custom time at midnight 1`] = `
<View
  className="mb-4"
  testID="enhanced-reminder-selector"
>
  <View
    className="flex-row items-center justify-between rounded-xl border border-stone-200 bg-white px-3.5 py-3"
    style={
      {
        "elevation": 1,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.05,
        "shadowRadius": 2,
      }
    }
  >
    <View
      className="flex-row items-center gap-3"
    >
      <View
        className="h-9 w-9 items-center justify-center rounded-full bg-amber-100"
      >
        <View
          color="#f59e0b"
          size={16}
          testID="lucide-icon-Bell"
        />
      </View>
      <Text
        className="text-sm font-medium text-stone-900"
      >
        Daily Reminder
      </Text>
    </View>
    <RCTSwitch
      accessibilityLabel="Disable reminder"
      accessibilityRole="switch"
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#10B981"
      style={
        [
          {
            "alignSelf": "flex-start",
          },
          {
            "backgroundColor": "#d6d3d1",
            "borderRadius": 16,
          },
        ]
      }
      testID="reminder-toggle"
      thumbTintColor="#ffffff"
      tintColor="#d6d3d1"
      value={true}
    />
  </View>
  <View
    className="mt-3"
  >
    <View
      className="mb-3 flex-row gap-2"
      testID="preset-buttons"
    >
      <View
        accessibilityLabel="Set reminder for 7 AM"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": false,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="flex-1"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="preset-morning"
      >
        <View
          className="items-center justify-center rounded-xl px-2 py-2.5"
          collapsable={false}
          style={
            {
              "backgroundColor": "#f5f5f4",
              "borderColor": "transparent",
              "borderWidth": 1,
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <Text
            className="mb-0.5 text-base"
          >
            🌅
          </Text>
          <Text
            className="text-xs font-medium"
            style={
              {
                "color": "#57534e",
              }
            }
          >
            7 AM
          </Text>
        </View>
      </View>
      <View
        accessibilityLabel="Set reminder for 12 PM"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": false,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="flex-1"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="preset-midday"
      >
        <View
          className="items-center justify-center rounded-xl px-2 py-2.5"
          collapsable={false}
          style={
            {
              "backgroundColor": "#f5f5f4",
              "borderColor": "transparent",
              "borderWidth": 1,
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <Text
            className="mb-0.5 text-base"
          >
            ☀️
          </Text>
          <Text
            className="text-xs font-medium"
            style={
              {
                "color": "#57534e",
              }
            }
          >
            12 PM
          </Text>
        </View>
      </View>
      <View
        accessibilityLabel="Set reminder for 8 PM"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": false,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="flex-1"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="preset-evening"
      >
        <View
          className="items-center justify-center rounded-xl px-2 py-2.5"
          collapsable={false}
          style={
            {
              "backgroundColor": "#f5f5f4",
              "borderColor": "transparent",
              "borderWidth": 1,
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <Text
            className="mb-0.5 text-base"
          >
            🌙
          </Text>
          <Text
            className="text-xs font-medium"
            style={
              {
                "color": "#57534e",
              }
            }
          >
            8 PM
          </Text>
        </View>
      </View>
    </View>
    <View
      accessibilityHint="Opens time picker"
      accessibilityLabel="Custom time set to 12:00 AM. Double tap to change."
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      className="mb-3"
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID="custom-time-button"
    >
      <View
        className="flex-row items-center justify-between rounded-xl border px-3.5 py-3"
        style={
          {
            "backgroundColor": "#ECFDF5",
            "borderColor": "#10B981",
            "borderWidth": 2,
          }
        }
      >
        <View
          className="flex-row items-center gap-2.5"
        >
          <View
            color="#047857"
            size={16}
            testID="lucide-icon-Clock"
          />
          <Text
            className="text-sm font-medium"
            style={
              {
                "color": "#047857",
              }
            }
          >
            12:00 AM
          </Text>
        </View>
        <View
          color="#047857"
          size={18}
          testID="lucide-icon-ChevronRight"
        />
      </View>
    </View>
    <View
      className="items-center"
    >
      <View
        testID="next-reminder-badge"
      >
        <Text>
          Next: 
          12:00 AM
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`EnhancedReminderSelector Snapshots Enabled State renders with evening preset selected 1`] = `
<View
  className="mb-4"
  testID="enhanced-reminder-selector"
>
  <View
    className="flex-row items-center justify-between rounded-xl border border-stone-200 bg-white px-3.5 py-3"
    style={
      {
        "elevation": 1,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.05,
        "shadowRadius": 2,
      }
    }
  >
    <View
      className="flex-row items-center gap-3"
    >
      <View
        className="h-9 w-9 items-center justify-center rounded-full bg-amber-100"
      >
        <View
          color="#f59e0b"
          size={16}
          testID="lucide-icon-Bell"
        />
      </View>
      <Text
        className="text-sm font-medium text-stone-900"
      >
        Daily Reminder
      </Text>
    </View>
    <RCTSwitch
      accessibilityLabel="Disable reminder"
      accessibilityRole="switch"
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#10B981"
      style={
        [
          {
            "alignSelf": "flex-start",
          },
          {
            "backgroundColor": "#d6d3d1",
            "borderRadius": 16,
          },
        ]
      }
      testID="reminder-toggle"
      thumbTintColor="#ffffff"
      tintColor="#d6d3d1"
      value={true}
    />
  </View>
  <View
    className="mt-3"
  >
    <View
      className="mb-3 flex-row gap-2"
      testID="preset-buttons"
    >
      <View
        accessibilityLabel="Set reminder for 7 AM"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": false,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="flex-1"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="preset-morning"
      >
        <View
          className="items-center justify-center rounded-xl px-2 py-2.5"
          collapsable={false}
          style={
            {
              "backgroundColor": "#f5f5f4",
              "borderColor": "transparent",
              "borderWidth": 1,
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <Text
            className="mb-0.5 text-base"
          >
            🌅
          </Text>
          <Text
            className="text-xs font-medium"
            style={
              {
                "color": "#57534e",
              }
            }
          >
            7 AM
          </Text>
        </View>
      </View>
      <View
        accessibilityLabel="Set reminder for 12 PM"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": false,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="flex-1"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="preset-midday"
      >
        <View
          className="items-center justify-center rounded-xl px-2 py-2.5"
          collapsable={false}
          style={
            {
              "backgroundColor": "#f5f5f4",
              "borderColor": "transparent",
              "borderWidth": 1,
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <Text
            className="mb-0.5 text-base"
          >
            ☀️
          </Text>
          <Text
            className="text-xs font-medium"
            style={
              {
                "color": "#57534e",
              }
            }
          >
            12 PM
          </Text>
        </View>
      </View>
      <View
        accessibilityLabel="Set reminder for 8 PM"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": true,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="flex-1"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="preset-evening"
      >
        <View
          className="items-center justify-center rounded-xl px-2 py-2.5"
          collapsable={false}
          style={
            {
              "backgroundColor": "#ECFDF5",
              "borderColor": "#10B981",
              "borderWidth": 2,
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <Text
            className="mb-0.5 text-base"
          >
            🌙
          </Text>
          <Text
            className="text-xs font-medium"
            style={
              {
                "color": "#059669",
              }
            }
          >
            8 PM
          </Text>
        </View>
      </View>
    </View>
    <View
      accessibilityHint="Opens time picker"
      accessibilityLabel="Set a custom reminder time"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      className="mb-3"
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID="custom-time-button"
    >
      <View
        className="flex-row items-center justify-between rounded-xl border px-3.5 py-3"
        style={
          {
            "backgroundColor": "#ffffff",
            "borderColor": "#e7e5e4",
            "borderWidth": 1,
          }
        }
      >
        <View
          className="flex-row items-center gap-2.5"
        >
          <View
            color="#78716c"
            size={16}
            testID="lucide-icon-Clock"
          />
          <Text
            className="text-sm font-medium"
            style={
              {
                "color": "#1c1917",
              }
            }
          >
            Custom time...
          </Text>
        </View>
        <View
          color="#a8a29e"
          size={18}
          testID="lucide-icon-ChevronRight"
        />
      </View>
    </View>
    <View
      className="items-center"
    >
      <View
        testID="next-reminder-badge"
      >
        <Text>
          Next: 
          8:00 PM
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`EnhancedReminderSelector Snapshots Enabled State renders with midday preset selected 1`] = `
<View
  className="mb-4"
  testID="enhanced-reminder-selector"
>
  <View
    className="flex-row items-center justify-between rounded-xl border border-stone-200 bg-white px-3.5 py-3"
    style={
      {
        "elevation": 1,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.05,
        "shadowRadius": 2,
      }
    }
  >
    <View
      className="flex-row items-center gap-3"
    >
      <View
        className="h-9 w-9 items-center justify-center rounded-full bg-amber-100"
      >
        <View
          color="#f59e0b"
          size={16}
          testID="lucide-icon-Bell"
        />
      </View>
      <Text
        className="text-sm font-medium text-stone-900"
      >
        Daily Reminder
      </Text>
    </View>
    <RCTSwitch
      accessibilityLabel="Disable reminder"
      accessibilityRole="switch"
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#10B981"
      style={
        [
          {
            "alignSelf": "flex-start",
          },
          {
            "backgroundColor": "#d6d3d1",
            "borderRadius": 16,
          },
        ]
      }
      testID="reminder-toggle"
      thumbTintColor="#ffffff"
      tintColor="#d6d3d1"
      value={true}
    />
  </View>
  <View
    className="mt-3"
  >
    <View
      className="mb-3 flex-row gap-2"
      testID="preset-buttons"
    >
      <View
        accessibilityLabel="Set reminder for 7 AM"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": false,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="flex-1"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="preset-morning"
      >
        <View
          className="items-center justify-center rounded-xl px-2 py-2.5"
          collapsable={false}
          style={
            {
              "backgroundColor": "#f5f5f4",
              "borderColor": "transparent",
              "borderWidth": 1,
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <Text
            className="mb-0.5 text-base"
          >
            🌅
          </Text>
          <Text
            className="text-xs font-medium"
            style={
              {
                "color": "#57534e",
              }
            }
          >
            7 AM
          </Text>
        </View>
      </View>
      <View
        accessibilityLabel="Set reminder for 12 PM"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": true,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="flex-1"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="preset-midday"
      >
        <View
          className="items-center justify-center rounded-xl px-2 py-2.5"
          collapsable={false}
          style={
            {
              "backgroundColor": "#ECFDF5",
              "borderColor": "#10B981",
              "borderWidth": 2,
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <Text
            className="mb-0.5 text-base"
          >
            ☀️
          </Text>
          <Text
            className="text-xs font-medium"
            style={
              {
                "color": "#059669",
              }
            }
          >
            12 PM
          </Text>
        </View>
      </View>
      <View
        accessibilityLabel="Set reminder for 8 PM"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": false,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="flex-1"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="preset-evening"
      >
        <View
          className="items-center justify-center rounded-xl px-2 py-2.5"
          collapsable={false}
          style={
            {
              "backgroundColor": "#f5f5f4",
              "borderColor": "transparent",
              "borderWidth": 1,
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <Text
            className="mb-0.5 text-base"
          >
            🌙
          </Text>
          <Text
            className="text-xs font-medium"
            style={
              {
                "color": "#57534e",
              }
            }
          >
            8 PM
          </Text>
        </View>
      </View>
    </View>
    <View
      accessibilityHint="Opens time picker"
      accessibilityLabel="Set a custom reminder time"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      className="mb-3"
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID="custom-time-button"
    >
      <View
        className="flex-row items-center justify-between rounded-xl border px-3.5 py-3"
        style={
          {
            "backgroundColor": "#ffffff",
            "borderColor": "#e7e5e4",
            "borderWidth": 1,
          }
        }
      >
        <View
          className="flex-row items-center gap-2.5"
        >
          <View
            color="#78716c"
            size={16}
            testID="lucide-icon-Clock"
          />
          <Text
            className="text-sm font-medium"
            style={
              {
                "color": "#1c1917",
              }
            }
          >
            Custom time...
          </Text>
        </View>
        <View
          color="#a8a29e"
          size={18}
          testID="lucide-icon-ChevronRight"
        />
      </View>
    </View>
    <View
      className="items-center"
    >
      <View
        testID="next-reminder-badge"
      >
        <Text>
          Next: 
          12:00 PM
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`EnhancedReminderSelector Snapshots Enabled State renders with morning preset selected 1`] = `
<View
  className="mb-4"
  testID="enhanced-reminder-selector"
>
  <View
    className="flex-row items-center justify-between rounded-xl border border-stone-200 bg-white px-3.5 py-3"
    style={
      {
        "elevation": 1,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.05,
        "shadowRadius": 2,
      }
    }
  >
    <View
      className="flex-row items-center gap-3"
    >
      <View
        className="h-9 w-9 items-center justify-center rounded-full bg-amber-100"
      >
        <View
          color="#f59e0b"
          size={16}
          testID="lucide-icon-Bell"
        />
      </View>
      <Text
        className="text-sm font-medium text-stone-900"
      >
        Daily Reminder
      </Text>
    </View>
    <RCTSwitch
      accessibilityLabel="Disable reminder"
      accessibilityRole="switch"
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#10B981"
      style={
        [
          {
            "alignSelf": "flex-start",
          },
          {
            "backgroundColor": "#d6d3d1",
            "borderRadius": 16,
          },
        ]
      }
      testID="reminder-toggle"
      thumbTintColor="#ffffff"
      tintColor="#d6d3d1"
      value={true}
    />
  </View>
  <View
    className="mt-3"
  >
    <View
      className="mb-3 flex-row gap-2"
      testID="preset-buttons"
    >
      <View
        accessibilityLabel="Set reminder for 7 AM"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": true,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="flex-1"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="preset-morning"
      >
        <View
          className="items-center justify-center rounded-xl px-2 py-2.5"
          collapsable={false}
          style={
            {
              "backgroundColor": "#ECFDF5",
              "borderColor": "#10B981",
              "borderWidth": 2,
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <Text
            className="mb-0.5 text-base"
          >
            🌅
          </Text>
          <Text
            className="text-xs font-medium"
            style={
              {
                "color": "#059669",
              }
            }
          >
            7 AM
          </Text>
        </View>
      </View>
      <View
        accessibilityLabel="Set reminder for 12 PM"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": false,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="flex-1"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="preset-midday"
      >
        <View
          className="items-center justify-center rounded-xl px-2 py-2.5"
          collapsable={false}
          style={
            {
              "backgroundColor": "#f5f5f4",
              "borderColor": "transparent",
              "borderWidth": 1,
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <Text
            className="mb-0.5 text-base"
          >
            ☀️
          </Text>
          <Text
            className="text-xs font-medium"
            style={
              {
                "color": "#57534e",
              }
            }
          >
            12 PM
          </Text>
        </View>
      </View>
      <View
        accessibilityLabel="Set reminder for 8 PM"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": false,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="flex-1"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="preset-evening"
      >
        <View
          className="items-center justify-center rounded-xl px-2 py-2.5"
          collapsable={false}
          style={
            {
              "backgroundColor": "#f5f5f4",
              "borderColor": "transparent",
              "borderWidth": 1,
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <Text
            className="mb-0.5 text-base"
          >
            🌙
          </Text>
          <Text
            className="text-xs font-medium"
            style={
              {
                "color": "#57534e",
              }
            }
          >
            8 PM
          </Text>
        </View>
      </View>
    </View>
    <View
      accessibilityHint="Opens time picker"
      accessibilityLabel="Set a custom reminder time"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      className="mb-3"
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID="custom-time-button"
    >
      <View
        className="flex-row items-center justify-between rounded-xl border px-3.5 py-3"
        style={
          {
            "backgroundColor": "#ffffff",
            "borderColor": "#e7e5e4",
            "borderWidth": 1,
          }
        }
      >
        <View
          className="flex-row items-center gap-2.5"
        >
          <View
            color="#78716c"
            size={16}
            testID="lucide-icon-Clock"
          />
          <Text
            className="text-sm font-medium"
            style={
              {
                "color": "#1c1917",
              }
            }
          >
            Custom time...
          </Text>
        </View>
        <View
          color="#a8a29e"
          size={18}
          testID="lucide-icon-ChevronRight"
        />
      </View>
    </View>
    <View
      className="items-center"
    >
      <View
        testID="next-reminder-badge"
      >
        <Text>
          Next: 
          7:00 AM
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`EnhancedReminderSelector Snapshots Optional Props renders with custom presets 1`] = `
<View
  className="mb-4"
  testID="enhanced-reminder-selector"
>
  <View
    className="flex-row items-center justify-between rounded-xl border border-stone-200 bg-white px-3.5 py-3"
    style={
      {
        "elevation": 1,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.05,
        "shadowRadius": 2,
      }
    }
  >
    <View
      className="flex-row items-center gap-3"
    >
      <View
        className="h-9 w-9 items-center justify-center rounded-full bg-amber-100"
      >
        <View
          color="#f59e0b"
          size={16}
          testID="lucide-icon-Bell"
        />
      </View>
      <Text
        className="text-sm font-medium text-stone-900"
      >
        Daily Reminder
      </Text>
    </View>
    <RCTSwitch
      accessibilityLabel="Disable reminder"
      accessibilityRole="switch"
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#10B981"
      style={
        [
          {
            "alignSelf": "flex-start",
          },
          {
            "backgroundColor": "#d6d3d1",
            "borderRadius": 16,
          },
        ]
      }
      testID="reminder-toggle"
      thumbTintColor="#ffffff"
      tintColor="#d6d3d1"
      value={true}
    />
  </View>
  <View
    className="mt-3"
  >
    <View
      className="mb-3 flex-row gap-2"
      testID="preset-buttons"
    >
      <View
        accessibilityLabel="Set reminder for 5 AM"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": true,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="flex-1"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="preset-early"
      >
        <View
          className="items-center justify-center rounded-xl px-2 py-2.5"
          collapsable={false}
          style={
            {
              "backgroundColor": "#ECFDF5",
              "borderColor": "#10B981",
              "borderWidth": 2,
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <Text
            className="mb-0.5 text-base"
          >
            🌄
          </Text>
          <Text
            className="text-xs font-medium"
            style={
              {
                "color": "#059669",
              }
            }
          >
            5 AM
          </Text>
        </View>
      </View>
      <View
        accessibilityLabel="Set reminder for 11 PM"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": false,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="flex-1"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="preset-late"
      >
        <View
          className="items-center justify-center rounded-xl px-2 py-2.5"
          collapsable={false}
          style={
            {
              "backgroundColor": "#f5f5f4",
              "borderColor": "transparent",
              "borderWidth": 1,
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <Text
            className="mb-0.5 text-base"
          >
            🌃
          </Text>
          <Text
            className="text-xs font-medium"
            style={
              {
                "color": "#57534e",
              }
            }
          >
            11 PM
          </Text>
        </View>
      </View>
    </View>
    <View
      accessibilityHint="Opens time picker"
      accessibilityLabel="Set a custom reminder time"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      className="mb-3"
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID="custom-time-button"
    >
      <View
        className="flex-row items-center justify-between rounded-xl border px-3.5 py-3"
        style={
          {
            "backgroundColor": "#ffffff",
            "borderColor": "#e7e5e4",
            "borderWidth": 1,
          }
        }
      >
        <View
          className="flex-row items-center gap-2.5"
        >
          <View
            color="#78716c"
            size={16}
            testID="lucide-icon-Clock"
          />
          <Text
            className="text-sm font-medium"
            style={
              {
                "color": "#1c1917",
              }
            }
          >
            Custom time...
          </Text>
        </View>
        <View
          color="#a8a29e"
          size={18}
          testID="lucide-icon-ChevronRight"
        />
      </View>
    </View>
    <View
      className="items-center"
    >
      <View
        testID="next-reminder-badge"
      >
        <Text>
          Next: 
          5:00 AM
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`EnhancedReminderSelector Snapshots Optional Props renders without next reminder badge 1`] = `
<View
  className="mb-4"
  testID="enhanced-reminder-selector"
>
  <View
    className="flex-row items-center justify-between rounded-xl border border-stone-200 bg-white px-3.5 py-3"
    style={
      {
        "elevation": 1,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.05,
        "shadowRadius": 2,
      }
    }
  >
    <View
      className="flex-row items-center gap-3"
    >
      <View
        className="h-9 w-9 items-center justify-center rounded-full bg-amber-100"
      >
        <View
          color="#f59e0b"
          size={16}
          testID="lucide-icon-Bell"
        />
      </View>
      <Text
        className="text-sm font-medium text-stone-900"
      >
        Daily Reminder
      </Text>
    </View>
    <RCTSwitch
      accessibilityLabel="Disable reminder"
      accessibilityRole="switch"
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#10B981"
      style={
        [
          {
            "alignSelf": "flex-start",
          },
          {
            "backgroundColor": "#d6d3d1",
            "borderRadius": 16,
          },
        ]
      }
      testID="reminder-toggle"
      thumbTintColor="#ffffff"
      tintColor="#d6d3d1"
      value={true}
    />
  </View>
  <View
    className="mt-3"
  >
    <View
      className="mb-3 flex-row gap-2"
      testID="preset-buttons"
    >
      <View
        accessibilityLabel="Set reminder for 7 AM"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": false,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="flex-1"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="preset-morning"
      >
        <View
          className="items-center justify-center rounded-xl px-2 py-2.5"
          collapsable={false}
          style={
            {
              "backgroundColor": "#f5f5f4",
              "borderColor": "transparent",
              "borderWidth": 1,
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <Text
            className="mb-0.5 text-base"
          >
            🌅
          </Text>
          <Text
            className="text-xs font-medium"
            style={
              {
                "color": "#57534e",
              }
            }
          >
            7 AM
          </Text>
        </View>
      </View>
      <View
        accessibilityLabel="Set reminder for 12 PM"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": true,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="flex-1"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="preset-midday"
      >
        <View
          className="items-center justify-center rounded-xl px-2 py-2.5"
          collapsable={false}
          style={
            {
              "backgroundColor": "#ECFDF5",
              "borderColor": "#10B981",
              "borderWidth": 2,
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <Text
            className="mb-0.5 text-base"
          >
            ☀️
          </Text>
          <Text
            className="text-xs font-medium"
            style={
              {
                "color": "#059669",
              }
            }
          >
            12 PM
          </Text>
        </View>
      </View>
      <View
        accessibilityLabel="Set reminder for 8 PM"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": false,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="flex-1"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="preset-evening"
      >
        <View
          className="items-center justify-center rounded-xl px-2 py-2.5"
          collapsable={false}
          style={
            {
              "backgroundColor": "#f5f5f4",
              "borderColor": "transparent",
              "borderWidth": 1,
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <Text
            className="mb-0.5 text-base"
          >
            🌙
          </Text>
          <Text
            className="text-xs font-medium"
            style={
              {
                "color": "#57534e",
              }
            }
          >
            8 PM
          </Text>
        </View>
      </View>
    </View>
    <View
      accessibilityHint="Opens time picker"
      accessibilityLabel="Set a custom reminder time"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      className="mb-3"
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID="custom-time-button"
    >
      <View
        className="flex-row items-center justify-between rounded-xl border px-3.5 py-3"
        style={
          {
            "backgroundColor": "#ffffff",
            "borderColor": "#e7e5e4",
            "borderWidth": 1,
          }
        }
      >
        <View
          className="flex-row items-center gap-2.5"
        >
          <View
            color="#78716c"
            size={16}
            testID="lucide-icon-Clock"
          />
          <Text
            className="text-sm font-medium"
            style={
              {
                "color": "#1c1917",
              }
            }
          >
            Custom time...
          </Text>
        </View>
        <View
          color="#a8a29e"
          size={18}
          testID="lucide-icon-ChevronRight"
        />
      </View>
    </View>
  </View>
</View>
`;
